# labfile-generator

./: .env.example  .gitignore  GEMINI.md  README.md  main.py  md-to-docs.py  mdfiles-generator.py  pyproject.toml
cli/: main.py
cli/template/: template.docx
cli/utils/: converter.py
utils/: ai.py
www/: .example.env  GEMINI.md  README.md  package.json  pnpm-lock.yaml  todos.md
www/src/app/: page.tsx
www/src/app/api/aims/extract/: route.ts
www/src/app/api/generate/: route.ts
www/src/app/docs/system-instruction/: page.tsx
www/src/app/editor/: page.tsx
www/src/components/: aim.tsx  aims-list.tsx  create-files-button.tsx  section.tsx  sections-list.tsx  system-instruction-dialog.tsx  view-mode-toggle.tsx
www/src/components/icons/: dustbin.tsx  list.tsx  pencil-outline.tsx
www/src/components/ui/: multi-step-loader.tsx  sidebar.tsx  stateful-button.tsx
www/src/context/: practicals-store.ts  structure-store.ts  system-instruction-store.ts
www/src/lib/: idb.ts  types.ts
