[project]
name = "labfile-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-google-genai>=3.0.0",
    "langchain[google-genai]>=1.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[project.scripts]
labgen = "main:main"
