[project]
name = "labfile-generator"
version = "0.1.0"
description = "A command-line tool to streamline the process of creating lab reports."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "langchain-google-genai",
    "pydantic",
    "python-dotenv",
    "questionary",
    "rich",
]

[project.scripts]
labgen = "main:main"
